--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,22 +1,92 @@
-ul {
+.body {
+    font-family: Roboto;
+    color: #757575;
+}
+ul {list-style: none;}
+
+/* global */
+.logo {
+    width: 145px;
+    height: 31px;
+    font-family: Raleway;
+    font-weight: bold;
+font-size: 26px;
+line-height: 31px;
+letter-spacing: 0.03em;
+color: black;
+text-decoration: none;
+}
+.web {
+    color: #2196F3;
+}
+/* logo */
+
+
+.style-nav .link-stud:hover,
+.style-nav .link-stud:focus {
+    color: #2196F3;
+}
+
+.style-nav .link {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: #212121;
+    text-decoration: none;
     list-style: none;
 }
-/* style heder */
-
-
 
 .style-nav .link:hover,
 .style-nav .link:focus {
-color: #2196F3;
-}
-.style-nav .link {
-    color: #212121;
-}
-
-.auth-nav .linknav:hover,
-.auth-nav .linknav:focus {
     color: #2196F3;
 }
 .auth-nav .linknav {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    text-decoration: none;
+    list-style: none;
+    color: #757575;
+}
+.auth-nav .linknav:focus,
+.auth-nav .linknav:hover {
+    color: #2196F3;
+}
+/* header */
+.main-title {
+    background-color: #2F303A;
+    color: #FFFFFF;
+}
+.main-title .title {
+    font-size: 44px;
+    line-height: 60px;
+    font-weight: 900;
+    text-align: center;
+    letter-spacing: 0.06em
+}
+.button {
+    background-color: #2196F3;
+    color: #FFFFFF;
+    width: 200px;
+    height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-size: 16px
+}
+/* effect button */
+.hero .list {
+    font-size: 14px;
+    line-height: 24px;
+}
+.hero .headlines {
+    font-size: 14px;
+    line-height: 16,41px;
+    color: #212121;
+    font-weight: 700;
+}
+.main-headlines {
+    font-size: 36px;
+    line-height: 42px;
+    font-weight: 700;
     color: #212121;
 }
