--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,23 +10,14 @@ ul {list-style: none;}
     height: 31px;
     font-family: Raleway;
     font-weight: bold;
-font-size: 26px;
-line-height: 31px;
-letter-spacing: 0.03em;
-color: black;
-text-decoration: none;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    color: black;
+    text-decoration: none;
 }
-.web {
-    color: #2196F3;
-}
+.web {color: #2196F3;}
 /* logo */
-
-
-.style-nav .link-stud:hover,
-.style-nav .link-stud:focus {
-    color: #2196F3;
-}
-
 .style-nav .link {
     font-size: 14px;
     line-height: 16px;
@@ -35,7 +26,6 @@ text-decoration: none;
     text-decoration: none;
     list-style: none;
 }
-
 .style-nav .link:hover,
 .style-nav .link:focus {
     color: #2196F3;
@@ -65,13 +55,22 @@ text-decoration: none;
     letter-spacing: 0.06em
 }
 .button {
-    background-color: #2196F3;
-    color: #FFFFFF;
+    
+    font-family: "Roboto";
+    border-radius: 4px;
+    background-color: #f5f4fa;
+    color: black;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 700;
     width: 200px;
     height: 50px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    font-size: 16px
+    left: 700px;
+    top: 430px;
+}
+.button:hover {
+background-color: #2196F3;
+color: #FFFFFF;
 }
 /* effect button */
 .hero .list {
@@ -80,13 +79,178 @@ text-decoration: none;
 }
 .hero .headlines {
     font-size: 14px;
-    line-height: 16,41px;
+    line-height: 16px;
     color: #212121;
     font-weight: 700;
+}
+/* skills */
+.our-team {
+    background-color: #F5F4FA;
 }
 .main-headlines {
     font-size: 36px;
     line-height: 42px;
     font-weight: 700;
     color: #212121;
+}
+.employee {
+    width: 270px;
+    height: 368px;
+    left: 515px;
+    top: 1635px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.workers {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #212121;
+}
+.positions {
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 400;
+    text-align: center;
+}
+/* our team */
+.downfooter {
+    background-color: #2F303A;
+}
+.logodown {
+    font-family: Raleway;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.web {
+    color: #2196F3;
+}
+.address {
+    font-size: 14px;
+    line-height: 24px;
+    color: #FFFFFF;
+    font-weight: 400;
+}
+.downfooter .linknav {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    text-decoration: none;
+    list-style: none;
+    color: #757575;
+}
+.downfooter .linknav:focus,
+.downfooter .linknav:hover {
+    color: #2196F3;
+}
+/* footeer */
+
+
+/* Portfolio */
+.logo {
+    width: 145px;
+    height: 31px;
+    font-family: Raleway;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    color: black;
+    text-decoration: none;
+}
+.web {
+    color: #2196F3;
+}
+
+.style-nav .link {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: #212121;
+    text-decoration: none;
+    list-style: none;
+}
+.style-nav .link:hover,
+.style-nav .link:focus {
+    color: #2196F3;}
+    .auth-nav .linknav {
+        font-size: 14px;
+        line-height: 16px;
+        font-weight: 500;
+        text-decoration: none;
+        list-style: none;
+        color: #757575;
+    }
+    .auth-nav .linknav:focus,
+    .auth-nav .linknav:hover {
+        color: #2196F3;
+    }    
+.portfolio-nav {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+
+}
+  /* header-portfolio */
+.button-port {
+    
+        font-family: "Roboto";
+        border-radius: 4px;
+        background-color: #f5f4fa;
+        color: black;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 26px;
+    }
+.button-port:hover {
+    background-color: #2196F3;
+    color: #FFFFFF;
+}
+/* buttons portfolio */
+.image-title {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 36px;
+    color: #212121;
+}
+.description {
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 400;
+}
+/*assortment */
+
+.logodown-port {
+    font-family: Raleway;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.web {
+    color: #2196F3;
+}
+.downfooter-port {
+    background-color: #2F303A;
+}
+.address-port {
+    color: #FFFFFF;
+}
+.downfooter-port .linknav-port {
+    font-size: 14px;
+    line-height: 24px;
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+    list-style: none;
+}
+.downfooter-potr .linknav-port:focus,
+.downfooter-port .linknav-port:hover {
+    color: #2196F3;
 }
